modified:   .gitignore 	new file:   img/avatar.jpg 	new file:   img/photo.jpg 	new file:   inde2x.html 	modified:   index.html 	new file:   js/app.js 	modified:   js/main.js 	new file:   js/particles.js 	new file:   js/particlesjs-config (1).json 	deleted:    scss/_about.scss 	new file:   scss/_components.scss 	modified:   scss/_config.scss 	deleted:    scss/_home.scss 	new file:   scss/components/_about.scss 	new file:   scss/components/_footer.scss 	new file:   scss/components/_home.scss 	renamed:    scss/_menu.scss -> scss/components/_menu.scss 	modified:   scss/main.scss 	modified:   src/css/main.css 	modified:   src/css/main.css.map

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 backup tutorial/
+.gitignore
+node_modules
+public
+.firebaserc
+database.rules.json
+firebase.json
+package-lock.json
+package.json
+.vscode
